HW03/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-service
  namespace: default
  labels:
    app: simple-service
spec:
  selector:
    matchLabels:
      app: simple-service
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: simple-service
    spec:
      containers:
      - name: simple-service
        image: vvsem/simple-service:2.0.0
        
        resources:
          requests:
            cpu: 300m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 300Mi

        livenessProbe:
          httpGet:
            path: /health/
            port: 8000
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health/
            port: 8000
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 1
        ports:
        - containerPort: 8000
          name: simple-service
