HW03/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  selector:
    app: simple-service
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
